--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@abcnews/react-globe": "^1.0.2",
     "@abcnews/scrollyteller": "^1.0.4",
     "d3-request": "^1.0.6",
+    "hoek": "^4.2.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
